--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,13 +1,14 @@
 <header th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
     <div th:fragment="header">
+        <!-- Bootstrap CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <!--Bootstrap CSS CDN-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
         <!--Standard CSS-->
-        <link rel="stylesheet" href="/custom.css">
+<!--        <link rel="stylesheet" href="/custom.css">-->
     </div>
     <!-- Static navbar -->
-    <nav class="navbar navbar-default">
+   <!-- <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -30,7 +31,8 @@
                     <li><a href="../navbar-static-top/">Static top</a></li>
                     <li><a href="../navbar-fixed-top/">Fixed top</a></li>
                 </ul>
-            </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-    </nav>
+            </div>&lt;!&ndash;/.nav-collapse &ndash;&gt;
+        </div>&lt;!&ndash;/.container-fluid &ndash;&gt;
+    </nav>-->
 </header>
+
