--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <!-- TODO(): Update spring security to version 5 -->
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-
 <head>
     <title>Log in</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-<!--    <link rel="stylesheet" href="/custom.css">-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!--    <script src="/custom.js"></script>-->
+    <div th:replace="/fragments/header :: header"></div>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
+<div class="container">
+    <div th:replace="fragments/navbar"/>
+</div>
 <div class="container">
     <h2>Welcome!</h2>
     <form th:action="@{/login}" method="post"><br/>
@@ -24,5 +22,7 @@
         <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit">Log in</button>
     </form>
 </div>
+<div th:replace = "/fragments/footer :: scripts"></div>
+<div th:replace = "/fragments/footer :: copy"></div>
 </body>
 </html>
