corrected the UserController and the users template.

--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -8,11 +8,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 &lt;!&ndash;    <script src="/custom.js"></script>&ndash;&gt;-->
+    <div th:replace="/fragments/header :: header"></div>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
-<div th:replace="fragments/navbar"></div>
+<div class="container">
+    <div th:replace="fragments/navbar"/>
+</div>
+
 <div class="container">
     <h2>Tweets</h2>
     <div th:each="tweet:${tweetList}">
