--- a/src/main/resources/templates/newTweet.html
+++ b/src/main/resources/templates/newTweet.html
@@ -2,16 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <title>New Tweet</title>
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-&lt;!&ndash;    <link rel="stylesheet" href="/custom.css">&ndash;&gt;
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-<!--    <script src="/custom.js"></script>-->
+    <div th:replace="/fragments/header :: header"></div>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
+<div class="container">
+    <div th:replace="fragments/navbar"/>
+</div>
 
 <div class="container">
     <div class="jumbotron col-md-8 col-md-offset-2">
