user page now shows up

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,10 +4,7 @@
     <title>Registration</title>
     <div th:replace="/fragments/header :: header"></div>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
-
-<body>
 
 <body>
 <div class="container">
@@ -42,7 +39,8 @@
         </div>
     </form>
 </div>
+<div th:replace = "/fragments/footer :: scripts"></div>
+<div th:replace = "/fragments/footer :: copy"></div>
 </body>
 
-</body>
 </html>
