--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -13,8 +13,8 @@
 </div>
 <div class="container">
     <h2>
-        Profile for <span th:test="${user.firstName}></span>
-        <span th:text="${user.lastName}></span>
+        Profile for <span th:text="${user.firstName}"></span>
+        <span th:text="${user.lastName}"></span>
         <span style="color: #00aced">
         @<span th:text="${user.username}"></span>
         </span>
@@ -27,6 +27,14 @@
     <div class="list-group" th:each="tweet:${tweetList}">
         <div class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between">
+
+                <form th:action="@{/follow/} + ${user.username}" th:if="${!following}" method="post">
+                    <button style="float:right" type="Submit" class="btn btn-lg btn-success">Follow</button>
+                </form>
+                <form th:action="@{/unfollow/} + ${user.username}" th:if="${following}" method="post">
+                    <button style="float:right" type="Submit" class="btn btn-lg btn-primary unfollow_btn">Following</button>
+                </form>
+
                 <h5>@<span th:text="${tweet.user.username}"></span>
                     <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
             </div>
