--- a/src/main/resources/templates/newTweet.html
+++ b/src/main/resources/templates/newTweet.html
@@ -4,7 +4,7 @@
     <title>New Tweet</title>
     <div th:replace="/fragments/header :: header"></div>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script src="/custom.js"></script>
 </head>
 
 <body>
