--- a/src/main/resources/templates/taggedTweets.html
+++ b/src/main/resources/templates/taggedTweets.html
@@ -7,10 +7,10 @@
 
     <div th:replace="/fragments/header :: header"></div>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="/custom.js"></script>
 </head>
 
 <body>
-<div class="container-fluid">
     <div class="container">
         <div th:replace="fragments/navbar"/>
     </div>
@@ -19,7 +19,8 @@
             <div class="list-group" th:each="tweet:${tweetList}">
                 <div class="list-group-item list-group-item-action">
                     <div class="d-flex w-100 justify-content-between">
-                        <a class="username" th:href="@{/users/} + ${tweet.user.username}">@<span th:text="${tweet.user.username}"></span></a><small> <span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small>
+                        <a class="username" th:href="@{/users/} + ${tweet.user.username}">@<span th:text="${tweet.user.username}"></span></a><small>
+                        <span th:text="${tweet.date}"></span></small>
                     </div>
                     <p class="mb-1" th:utext="${tweet.message}"></p>
                 </div>
@@ -28,7 +29,7 @@
                 <h3>No tweets contain this hashtag</h3>
             </div>
         </div>
-</div>
+
 <div th:replace = "/fragments/footer :: scripts"></div>
 <div th:replace = "/fragments/footer :: copy"></div>
 </body>
