--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -10,22 +10,33 @@
 &lt;!&ndash;    <script src="/custom.js"></script>&ndash;&gt;-->
     <div th:replace="/fragments/header :: header"></div>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script src="/custom.js"></script>
 </head>
 
 <body>
-<div class="container">
+<div class="container-fluid">
     <div th:replace="fragments/navbar"/>
 </div>
+<ul class="nav nav-tabs">
+    <li role="presentation" th:classappend="${filter == 'all' ? 'active' : '' }">
+        <a href="/tweets">All</a></li>
+    <li role="presentation" th:classappend="${filter == 'following' ? 'active' : '' }">
+        <a href="/tweets?filter=following">Following</a></li>
+</ul><br/>
 
 <div class="container">
     <h2>Tweets</h2>
     <div th:each="tweet:${tweetList}">
         <h5>@<span th:text="${tweet.user.username}"></span>
-            <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small>
+            <small><span th:text="${tweet.date}"></span></small>
         </h5>
         <p th:utext="${tweet.message}"></p>
     </div>
 </div>
-
+<div th:if="${#lists.isEmpty(tweetList) and filter == 'all'}">
+    <h3>No tweets have been created yet</h3>
+</div>
+<div th:if="${#lists.isEmpty(tweetList) and filter == 'following'}">
+    <h3>No tweets have been created by your followers</h3>
+</div>
 </body>
