--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,6 +5,7 @@
     <title>User</title>
     <div th:replace="/fragments/header :: header"></div>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="/custom.js"></script>
 </head>
 
 <body>
@@ -36,7 +37,7 @@
                 </form>
 
                 <h5>@<span th:text="${tweet.user.username}"></span>
-                    <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
+                    <small><span th:text="${tweet.date}"></span></small></h5>
             </div>
             <p class="mb-1" th:utext="${tweet.message}"></p>
         </div>
